springcloud/demo-test/destination-rule-all.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-provider
spec:
  host: service-provider
  subsets:
  - name: v1
    labels:
      label: v1
  - name: v2
    labels:
      label: v2
