springcloud/demo-test/hello-v1-world-v2-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-provider
spec:
  hosts:
  - service-provider
  http:
  - name: "hello-v1"
    match: 
    - uri:
        prefix: "/echo/hello"
    route:
    - destination:
        host: service-provider
        subset: v1
  - name: "default"
    route:
    - destination:
        host: service-provider
        subset: v2
