springcloud/demo-test/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-provider
spec:
  hosts:
  - service-provider
  http:
  - route:
    - destination:
        host: service-provider
